--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,6 @@
 .header {
   max-width: 880px;
-  min-height: 74px;
-  padding: 45px 0 0 0;
+  padding: 45px 0 41px 0;
   margin: 0 auto;
-  width: 880px;
   border-bottom: 1px solid #545454;
 }
