--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,5 +1,5 @@
 .header__logo {
-  background-image: url(../../../images/icons/logo-correct.svg);
+  background-image: url(../../../images/icons/logo.svg);
   max-width: 142px;
   height: 33px;
   background-repeat: no-repeat;
