--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,43 @@
 @import url(../vendor/normalize.css);
 @import url(../blocks/page/page.css);
 
+/* Header */
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/button/button.css);
+
+/* profile */
+
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__title/profile__title.css);
+@import url(../blocks/profile/__profession/profile__profession.css);
+@import url(../blocks/profile/__info/profile__info-container.css);
+@import url(../blocks/profile/__image/profile__image.css);
+@import url(../blocks/profile/__container/profile__container.css);
+@import url(../blocks/profile/__button/_edit/profile__button-edit.css);
+@import url(../blocks/profile/__button/_plus/profile__button-plus.css);
+
+/* element */
+
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__title/element__title.css);
+@import url(../blocks/element/__list/element__list.css);
+@import url(../blocks/element/__list/_item/element__list-item.css);
+@import url(../blocks/element/__image/element__image.css);
+@import url(../blocks/element/__content/element__content.css);
+@import url(../blocks/element/__button/element__button-like.css);
+
+/* footer */
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+
+/* popup */
+
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__button/_close/popup__button-close.css);
+@import url(../blocks/popup/__button/_submit/popup__button-submit.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__title/popup__title.css);
