--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -4,3 +4,11 @@
   align-items: center;
   flex-wrap: wrap;
 }
+
+@media screen and (max-width: 320px) {
+  .profile__container {
+    max-width: 100%;
+    justify-content: center;
+    flex-direction: column;
+  }
+}
