--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -3,3 +3,10 @@
   margin: 0 auto;
   max-width: 880px;
 }
+
+@media screen and (max-width: 320px) {
+  .element {
+    max-width: 320px;
+    padding: 36px 19px 28px 19px;
+  }
+}
