--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,3 +4,10 @@
   margin: 0 auto;
   width: 880px;
 }
+
+@media screen and (max-width: 320px) {
+  .footer {
+    max-width: 320px;
+    padding: 20px 0 36px 0;
+  }
+}
