--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -6,3 +6,10 @@
   background-position: top;
   background-size: 100%;
 }
+
+@media screen and (max-width: 320px) {
+  .header__logo {
+    max-width: 103px;
+    height: 24px;
+  }
+}
