--- a/blocks/profile/__button/_plus/profile__button-plus.css
+++ b/blocks/profile/__button/_plus/profile__button-plus.css
@@ -13,3 +13,12 @@
   align-items: flex-start;
   transition: 0.2s;
 }
+
+@media screen and (max-width: 320px) {
+  .profile__button-plus {
+    margin: 36px 18px;
+    width: 282px;
+    height: 50px;
+    padding: 17px 132px 17px 134px;
+  }
+}
