--- a/blocks/profile/__info/profile__info-container.css
+++ b/blocks/profile/__info/profile__info-container.css
@@ -8,3 +8,10 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 320px) {
+  .profile__info-container {
+    max-width: 282px;
+    justify-content: center;
+  }
+}
