--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -6,3 +6,12 @@
   margin: 10px 0 0 0;
   padding: 0;
 }
+
+@media screen and (max-width: 320px) {
+  .profile__profession {
+    max-width: 282px;
+    font-size: 14px;
+    line-height: 17px;
+    margin-top: 14px;
+  }
+}
