--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -7,3 +7,12 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media screen and (max-width: 320px) {
+  .profile {
+    max-width: 282px;
+    padding: 42px 19px 36px 19px;
+    justify-content: center;
+    flex-direction: column;
+  }
+}
