--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -11,3 +11,9 @@
 .popup__input:last-of-type {
   margin-bottom: 0;
 }
+
+@media screen and (max-width: 480px) {
+  .popup__input {
+    margin: 0 22px;
+  }
+}
