--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,7 +5,25 @@
   width: 880px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 980px) {
+  .footer {
+    max-width: 760px;
+  }
+}
+
+@media screen and (max-width: 810px) {
+  .footer {
+    max-width: 650px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .footer {
+    max-width: 480px;
+  }
+}
+
+@media screen and (max-width: 490px) {
   .footer {
     max-width: 320px;
     padding: 20px 0 36px 0;
