--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -7,9 +7,16 @@
   background-size: 100%;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 980px) {
   .header__logo {
     max-width: 103px;
     height: 24px;
   }
 }
+
+/* @media screen and (max-width: 320px) {
+  .header__logo {
+    max-width: 103px;
+    height: 24px;
+  }
+} */
