--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -9,3 +9,10 @@
   flex-direction: column;
   position: relative;
 }
+
+@media screen and (max-width: 480px) {
+  .popup__form {
+    max-width: 282px;
+    padding: 0;
+  }
+}
