--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -5,10 +5,18 @@
   flex-wrap: wrap;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 680px) {
   .profile__container {
     max-width: 100%;
     justify-content: center;
     flex-direction: column;
   }
 }
+
+/* @media screen and (max-width: 320px) {
+  .profile__container {
+    max-width: 100%;
+    justify-content: center;
+    flex-direction: column;
+  }
+} */
