--- a/blocks/gallery/__content/gallery__content.css
+++ b/blocks/gallery/__content/gallery__content.css
@@ -1,8 +1,9 @@
-.element__content {
+.gallery__content {
   display: flex;
   justify-content: space-between;
-  max-width: 246px;
+  max-width: 100%;
   min-height: 23px;
-  margin: 25px 15px 31px 21px;
+  margin: 25px auto 31px;
+  padding: 0 21px;
   align-items: center;
 }
