--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -1,10 +1,13 @@
 .profile__profession {
-  max-width: 336px;
+  max-width: 80%;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   margin: 10px 0 0 0;
   padding: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 320px) {
