--- a/pages/index.css
+++ b/pages/index.css
@@ -18,16 +18,18 @@
 @import url(../blocks/profile/__container/profile__container.css);
 @import url(../blocks/profile/__button/_edit/profile__button-edit.css);
 @import url(../blocks/profile/__button/_plus/profile__button-plus.css);
+@import url(../blocks/profile/__box/profile__box.css);
 
-/* element */
+/* gallery */
 
-@import url(../blocks/element/element.css);
-@import url(../blocks/element/__title/element__title.css);
-@import url(../blocks/element/__list/element__list.css);
-@import url(../blocks/element/__list/_item/element__list-item.css);
-@import url(../blocks/element/__image/element__image.css);
-@import url(../blocks/element/__content/element__content.css);
-@import url(../blocks/element/__button/element__button-like.css);
+@import url(../blocks/gallery/gallery.css);
+@import url(../blocks/gallery/__title/gallery__title.css);
+@import url(../blocks/gallery/__list/gallery__list.css);
+@import url(../blocks/gallery/__list/_item/gallery__list-item.css);
+@import url(../blocks/gallery/__image/gallery__image.css);
+@import url(../blocks/gallery/__content/gallery__content.css);
+@import url(../blocks/gallery/__button/gallery__button.css);
+@import url(../blocks/gallery/__button/_active/gallery__button_active.css);
 
 /* footer */
 
@@ -42,3 +44,4 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__active/popup__active.css);
