--- a/blocks/button/__close/button__close.css
+++ b/blocks/button/__close/button__close.css
@@ -1,9 +1,9 @@
-.popup__button-close {
+.button__close {
   width: 32px;
   height: 32px;
   background-color: unset;
   background-size: 100%;
-  background-image: url(../../../../images/icons/close.svg);
+  background-image: url(../../../images/icons/close.svg);
   background-repeat: no-repeat;
   border: none;
   position: absolute;
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 480px) {
-  .popup__button-close {
+  .button__close {
     width: 20px;
     height: 20px;
     right: -10px;
