--- a/blocks/button/__edit/button__edit.css
+++ b/blocks/button/__edit/button__edit.css
@@ -1,20 +1,20 @@
-.profile__button-edit {
+.button__edit {
   width: 24px;
   height: 24px;
   border: 1px solid #ffffff;
   background-color: #000000;
-  background-image: url(../../../../images/icons/edit.svg);
+  background-image: url(../../../images/icons/edit.svg);
   background-repeat: no-repeat;
   background-size: 10px 10px;
   background-position: center;
   padding: 7px;
   align-self: center;
-  margin-left: 18px;
+  margin-left: 24px;
   box-sizing: border-box;
 }
 
 @media screen and (max-width: 320px) {
-  .profile__button-edit {
+  .button__edit {
     width: 18px;
     height: 18px;
     background-size: 7.5px 7.5px;
