--- a/blocks/button/__submit/button__submit.css
+++ b/blocks/button/__submit/button__submit.css
@@ -1,4 +1,4 @@
-.popup__button-submit {
+.button__submit {
   margin-top: 48px;
   font-weight: 400;
   font-size: 18px;
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 480px) {
-  .popup__button-submit {
+  .button__submit {
     margin: 45px 22px 25px 22px;
     padding: 14px 0 14px 0;
   }
