--- a/pages/index.css
+++ b/pages/index.css
@@ -2,11 +2,20 @@
 @import url(../vendor/normalize.css);
 @import url(../blocks/page/page.css);
 
-/* Header */
+/* button */
+
+@import url(../blocks/button/button.css);
+@import url(../blocks/button/__edit/button__edit.css);
+@import url(../blocks/button/__plus/button__plus.css);
+@import url(../blocks/button/__like/button__like.css);
+@import url(../blocks/button/__like/_active/button__like_active.css);
+@import url(../blocks/button/__close/button__close.css);
+@import url(../blocks/button/__submit/button__submit.css);
+
+/* header */
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/button/button.css);
 
 /* profile */
 
@@ -16,8 +25,6 @@
 @import url(../blocks/profile/__info/profile__info-container.css);
 @import url(../blocks/profile/__image/profile__image.css);
 @import url(../blocks/profile/__container/profile__container.css);
-@import url(../blocks/profile/__button/_edit/profile__button-edit.css);
-@import url(../blocks/profile/__button/_plus/profile__button-plus.css);
 @import url(../blocks/profile/__box/profile__box.css);
 
 /* gallery */
@@ -28,8 +35,6 @@
 @import url(../blocks/gallery/__list/_item/gallery__list-item.css);
 @import url(../blocks/gallery/__image/gallery__image.css);
 @import url(../blocks/gallery/__content/gallery__content.css);
-@import url(../blocks/gallery/__button/gallery__button.css);
-@import url(../blocks/gallery/__button/_active/gallery__button_active.css);
 
 /* footer */
 
@@ -39,8 +44,6 @@
 /* popup */
 
 @import url(../blocks/popup/popup.css);
-@import url(../blocks/popup/__button/_close/popup__button-close.css);
-@import url(../blocks/popup/__button/_submit/popup__button-submit.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__title/popup__title.css);
