--- a/blocks/gallery/__like/gallery__like-button.css
+++ b/blocks/gallery/__like/gallery__like-button.css
@@ -1,4 +1,4 @@
-.button__like {
+.gallery__like-button {
   width: 22px;
   height: 19px;
   background-size: 100%;
@@ -7,4 +7,9 @@
   background-position: center;
   border: none;
   background-color: white;
+}
+
+.gallery__like-button:hover {
+  opacity: 0.5;
+  cursor: pointer;
 }
