--- a/blocks/profile/__edit/profile__edit-button.css
+++ b/blocks/profile/__edit/profile__edit-button.css
@@ -1,4 +1,4 @@
-.button__edit {
+.profile__edit-button {
   width: 24px;
   height: 24px;
   border: 1px solid #ffffff;
@@ -13,8 +13,13 @@
   box-sizing: border-box;
 }
 
+.profile__edit-button:hover {
+  opacity: 0.6;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 320px) {
-  .button__edit {
+  .profile__edit-button {
     width: 18px;
     height: 18px;
     background-size: 7.5px 7.5px;
