--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -4,7 +4,7 @@
   line-height: 17px;
   margin-bottom: 17px;
   border: none;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgb(0%, 0%, 0%, 0.2);
   padding: 13px 0;
 }
 
