--- a/blocks/popup/__submit/popup__submit-button.css
+++ b/blocks/popup/__submit/popup__submit-button.css
@@ -18,6 +18,9 @@
 
 @media screen and (max-width: 480px) {
   .popup__submit-button {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
     margin: 45px 22px 25px 22px;
     padding: 14px 0 14px 0;
   }
