--- a/blocks/profile/__info-container/profile__info-container.css
+++ b/blocks/profile/__info-container/profile__info-container.css
@@ -10,10 +10,15 @@
   align-items: flex-start;
 }
 
+@media screen and (max-width: 680px) {
+  .profile__info-container {
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 @media screen and (max-width: 400px) {
   .profile__info-container {
     max-width: 282px;
-    justify-content: center;
-    align-items: center;
   }
 }
