--- a/blocks/gallery/__list-item/gallery__list-item.css
+++ b/blocks/gallery/__list-item/gallery__list-item.css
@@ -5,6 +5,7 @@
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 20px;
+  position: relative;
 }
 
 @media screen and (max-width: 980px) {
