--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,19 +1,5 @@
 .popup__form {
-  margin: auto;
-  background-color: white;
-  max-width: 430px;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-  border-radius: 10px;
-  padding: 34px 36px 37px 36px;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  position: relative;
-}
-
-@media screen and (max-width: 480px) {
-  .popup__form {
-    max-width: 282px;
-    padding: 0;
-    margin: auto 19px;
-  }
 }
