--- a/blocks/gallery/__image/gallery__image.css
+++ b/blocks/gallery/__image/gallery__image.css
@@ -2,4 +2,10 @@
   width: 100%;
   height: 282px;
   object-fit: cover;
+  transition: 0.2s;
+}
+
+.gallery__image:hover {
+  cursor: pointer;
+  transform: scale(1.2);
 }
