--- a/pages/index.css
+++ b/pages/index.css
@@ -51,3 +51,4 @@
 @import url(../blocks/popup/__image-place/popup__image-place.css);
 @import url(../blocks/popup/__image-title/popup__image-title.css);
 @import url(../blocks/popup/_style/popup_style.css);
+@import url(../blocks/popup/__input/_type_error/popup__input_type_error.css);
