--- a/pages/index.css
+++ b/pages/index.css
@@ -52,3 +52,4 @@
 @import url(../blocks/popup/__image-title/popup__image-title.css);
 @import url(../blocks/popup/_style/popup_style.css);
 @import url(../blocks/popup/__input/_type_error/popup__input_type_error.css);
+@import url(../blocks/popup/__error/popup__error.css);
