--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -5,7 +5,7 @@
   margin-bottom: 17px;
   border: none;
   border-bottom: 1px solid rgb(0%, 0%, 0%, 0.2);
-  padding: 13px 0 0 0;
+  padding: 13px 0;
   width: 100%;
 }
 
