--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -9,11 +9,31 @@
   padding: 14px 0 18px 0;
   border-radius: 2px;
   border: none;
+  transition: 0.2s;
+  border: 1px solid white;
 }
 
 .popup__submit-button:hover {
   opacity: 0.8;
   cursor: pointer;
+}
+
+.popup__submit-button_invalid {
+  border: 1px solid grey;
+  background-color: white;
+  color: grey;
+  margin-top: 48px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  padding: 14px 0 18px 0;
+  border-radius: 2px;
+}
+
+.popup__submit-button_invalid:hover {
+  opacity: 1;
+  cursor: not-allowed;
 }
 
 @media screen and (max-width: 480px) {
