--- a/pages/index.css
+++ b/pages/index.css
@@ -53,3 +53,4 @@
 @import url(../blocks/popup/_style/popup_style.css);
 @import url(../blocks/popup/__input/_type_error/popup__input_type_error.css);
 @import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__field/popup__field.css);
