--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -6,6 +6,10 @@
   line-height: 15px;
   top: calc(100% + 5px);
   left: 0;
-  margin: 0;
-  padding: 0;
+}
+
+@media screen and (max-width: 480px) {
+  .popup__error {
+    margin: 0 22px 10px 22px;
+  }
 }
