--- a/blocks/popup/__submit-button/_disabled/popup__submit-button_disabled.css
+++ b/blocks/popup/__submit-button/_disabled/popup__submit-button_disabled.css
@@ -15,3 +15,12 @@
   opacity: 1;
   cursor: not-allowed;
 }
+
+@media screen and (max-width: 480px) {
+  .popup__submit-button_disabled {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 14px 0 14px 0;
+  }
+}
