--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -1,5 +1,6 @@
 .profile__container {
-  max-width: 880px;
+  width: 100%;
+  max-width: 80%;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
