--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -1,19 +1,5 @@
 .profile__image {
-  background-image: url(../../../images/avatar/avatar.jpg);
-  border-radius: 50%;
-  max-width: 120px;
-  height: 120px;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-color: #000000;
-  object-fit: contain;
-  margin-right: 30px;
-}
-
-@media screen and (max-width: 320px) {
-  .profile__image {
-    align-items: center;
-    margin-right: 0;
-    margin-bottom: 22px;
-  }
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
