--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,7 @@
 @import url(../blocks/profile/__box/profile__box.css);
 @import url(../blocks/profile/__edit/profile__edit-button.css);
 @import url(../blocks/profile/__plus/profile__plus-button.css);
+@import url(../blocks/profile/__image-container/profile__image-container.css);
 
 /* gallery */
 
