--- a/src/blocks/gallery/__like-button/gallery__like-button.css
+++ b/src/blocks/gallery/__like-button/gallery__like-button.css
@@ -2,7 +2,7 @@
   width: 22px;
   height: 19px;
   background-size: 100%;
-  background-image: url(../../../images/icons/like-black.svg);
+  background-image: url(../../../images/icons/like.svg);
   background-repeat: no-repeat;
   background-position: center;
   border: none;
