--- a/src/blocks/popup/__submit-button/popup__submit-button.css
+++ b/src/blocks/popup/__submit-button/popup__submit-button.css
@@ -1,15 +1,16 @@
 .popup__submit-button {
-  margin-top: 48px;
-  font-weight: 400;
+  color: white;
   font-size: 18px;
   line-height: 22px;
   text-align: center;
-  color: white;
-  background-color: #000000;
-  padding: 14px 0 18px 0;
+  background-color: black;
+  width: 100%;
+  max-width: 358px;
+  height: 50.15px;
   border-radius: 2px;
-  transition: 0.2s;
-  border: 1px solid white;
+  border: none;
+  outline: none;
+  margin-top: 15px;
 }
 
 .popup__submit-button:hover {
@@ -17,12 +18,15 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 568px) {
   .popup__submit-button {
+    width: 238px;
+    height: 46px;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-    margin: 45px 22px 25px 22px;
-    padding: 14px 0 14px 0;
+    margin-left: 22px;
+    margin-bottom: 27px;
+    margin-top: 15px;
   }
 }
