--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,19 +1,27 @@
 .popup__container {
-  margin: auto;
-  background-color: white;
-  max-width: 430px;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-  border-radius: 10px;
-  padding: 34px 36px 37px 36px;
   display: flex;
   flex-direction: column;
-  position: relative;
+  position: fixed;
+  width: 430px;
+  background-color: white;
+  border-radius: 10px;
+  margin: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 1;
+  z-index: 3;
+  color: black;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 550px) {
   .popup__container {
-    max-width: 282px;
-    padding: 0;
-    margin: auto 19px;
+    max-width: 320px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .popup__container {
+    max-width: 250px;
   }
 }
