--- a/src/blocks/popup/__field/popup__field.css
+++ b/src/blocks/popup/__field/popup__field.css
@@ -1,11 +1,6 @@
 .popup__field {
+  display: flex;
   position: relative;
-  width: 100%;
-  padding: 0;
-  margin-bottom: 34px;
-  border: none;
-}
-
-.popup__field:nth-of-type(2) {
-  margin-bottom: 0;
+  flex-direction: column;
+  margin-bottom: 35px;
 }
