--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -1,17 +1,18 @@
 .popup__title {
-  min-width: 330px;
-  color: #000000;
+  max-width: 330px;
+  color: black;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  margin: 0 0 41px 0;
+  margin-top: 34px;
+  margin-left: 36px;
+  margin-bottom: 54px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 568px) {
   .popup__title {
-    min-width: 238px;
-    margin: 25px 22px 62px 22px;
     font-size: 18px;
     line-height: 22px;
+    margin: 25px 22px 75px;
   }
 }
