--- a/src/blocks/popup/__submit-button/popup__submit-button.css
+++ b/src/blocks/popup/__submit-button/popup__submit-button.css
@@ -10,7 +10,7 @@
   border-radius: 2px;
   border: none;
   outline: none;
-  margin-top: 15px;
+  margin-top: 18px;
 }
 
 .popup__submit-button:hover {
@@ -18,7 +18,7 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 568px) {
+/* @media screen and (max-width: 568px) {
   .popup__submit-button {
     width: 238px;
     height: 46px;
@@ -29,4 +29,4 @@
     margin-bottom: 27px;
     margin-top: 15px;
   }
-}
+} */
