--- a/src/blocks/popup/__submit-button/popup__submit-button.css
+++ b/src/blocks/popup/__submit-button/popup__submit-button.css
@@ -18,15 +18,23 @@
   cursor: pointer;
 }
 
-/* @media screen and (max-width: 568px) {
-  .popup__submit-button {
-    width: 238px;
-    height: 46px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    margin-left: 22px;
-    margin-bottom: 27px;
-    margin-top: 15px;
-  }
-} */
+.popup__submit-button_confirmation {
+  color: white;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  background-color: black;
+  width: 100%;
+  max-width: 358px;
+  height: 50.15px;
+  border-radius: 2px;
+  border: none;
+  outline: none;
+  margin: 0 auto 36px auto;
+  padding: 0;
+}
+
+.popup__submit-button_confirmation:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
