--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -16,3 +16,14 @@
     margin: 25px 22px 75px;
   }
 }
+
+.popup__confirmation-title {
+  max-width: 330px;
+  color: black;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
+  margin-top: 34px;
+  margin-left: 36px;
+  margin-bottom: 38px;
+}
