--- a/src/blocks/profile/__image-container/profile__image-container.css
+++ b/src/blocks/profile/__image-container/profile__image-container.css
@@ -4,6 +4,12 @@
   border-radius: 50%;
   margin-right: 30px;
   overflow: hidden;
+  position: relative;
+}
+
+.profile__image-container:hover .profile__edit-button_avatar {
+  display: block;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 320px) {
