--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -19,6 +19,7 @@
 @import url(../blocks/profile/__edit/profile__edit-button.css);
 @import url(../blocks/profile/__plus/profile__plus-button.css);
 @import url(../blocks/profile/__image-container/profile__image-container.css);
+@import url(../blocks/profile/__edit-button-avatar/profile__edit-button-avatar.css);
 
 /* gallery */
 
@@ -32,6 +33,9 @@
 @import url(../blocks/gallery/__like-button/_active/gallery__like-button_active.css);
 @import url(../blocks/gallery/__delete-button/gallery__delete-button.css);
 @import url(../blocks/gallery/__image-container/gallery__image-container.css);
+@import url(../blocks/gallery/__like-count/gallery__like-count.css);
+@import url(../blocks/gallery/__like-container/gallery__like-container.css);
+@import url(../blocks/gallery/__delete-button/_hidden/gallery__delete-button_hidden.css);
 
 /* footer */
 
@@ -56,3 +60,5 @@
 @import url(../blocks/popup/__error/popup__error.css);
 @import url(../blocks/popup/__field/popup__field.css);
 @import url(../blocks/popup/__submit-button/_disabled/popup__submit-button_disabled.css);
+@import url(../blocks/popup/__confirmation-title/popup__confirmation-title.css);
+@import url(../blocks/popup/__submit-button/_confirmation/popup__submit-button_confirmation.css);
